# mdeutils

./: CMakeLists.txt  LICENSE  README.md
mauplay/: CMakeLists.txt  audio.c  db.c  id3.c  main.c  mauplay.h  pause.xpm  play.xpm  playlist.c  repeat.xpm  repeatsong.xpm  shuffle.xpm  skipback.xpm  skipfwd.xpm  stop.xpm  ui.c
mbiff/: CMakeLists.txt  mail.c  mailempty.xpm  mailfull.xpm  main.c  mbiff.h
mclock/: CMakeLists.txt  clock.c
mcompass/: CMakeLists.txt  main.c  mcompass.h
mimview/: CMakeLists.txt  image.c  main.c  mimview.h  ui.c
